background attachment fixed except on ios

--- a/src/components/styles/Masthead.css
+++ b/src/components/styles/Masthead.css
@@ -4,18 +4,17 @@
     background-size: cover;
 	background-position: center;
     background-repeat: no-repeat;
-    /*background-attachment: fixed; doesnt work on ios */
     color:white;
+    background-attachment: fixed; /* doesn't work on ios */
 }
-/* for the original layover design
-.layover {
-    height: 200px;
-    width: 300px;
-    color: white;
-    background-color: #0074d9;
-    margin: auto;
+
+/* revert to normal background on ios */
+@supports (-webkit-touch-callout: none) {
+    .masthead {
+        background-attachment: initial;
+    }
 }
-*/
+
 .masthead-title {
     font-weight: bold;
     font-size: 8vw;
